--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -17,10 +17,13 @@
         timeout: 600
 
     - name: 'install python for Ansible.'
-      apt:
-        name: python3
-        state: latest
-        update_cache: yes
+      become: true
+      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
+      changed_when: false
+      # apt:
+      #   name: python3
+      #   state: latest
+      #   update_cache: yes
 
   environment:
     - NODE_ENV: production
@@ -37,3 +40,4 @@
 
   roles:
     - configure-server
+    - configure-prometheus-node-exporter
