--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,24 +1,47 @@
 ---
-- name: 'update and upgrade packages.' # sudo apt upgrade
-  become: yes
-  apt:
-    upgrade: yes
-    update_cache: yes
-    cache_valid_time: 86400
-- name: remove unneeded deps # sudo apt autoremove
-  become: yes
-  apt:
-    autoremove: yes
-- name: install deps # sudo apt install nodejs npm
-  become: yes
-  apt:
-    name: ['nodejs', 'npm']
+- name: "Add Node.js from source"
+  become: true
+  shell: |
+    curl -sL https://deb.nodesource.com/setup13.x | sudo -E bash - 
+- name: "Install Node.js 13"
+  become: true
+  apt: 
+    name: ['nodejs','npm']
     state: latest
-    update_cache: yes
-- name: install pm2 # sudo npm install pm2 -g
-  become: yes
+    update_caches: yes
+
+- name: "Install PM2 Globally"
   npm:
     name: pm2
     global: yes
-    state: latest
-    production: yes
+
+- name: "move env variables to /etc/profile.d/"
+  become: true 
+  copy:
+    src: myenv.sh
+    dest: /etc/profile.d/
+
+
+# - name: 'update and upgrade packages.' # sudo apt upgrade
+#   become: yes
+#   apt:
+#     upgrade: yes
+#     update_cache: yes
+#     cache_valid_time: 86400
+# - name: remove unneeded deps # sudo apt autoremove
+#   become: yes
+#   apt:
+#     autoremove: yes
+# - name: install deps # sudo apt install nodejs npm
+#   become: yes
+#   apt:
+#     name: ['nodejs', 'npm']
+#     state: latest
+#     update_cache: yes
+# - name: install pm2 # sudo npm install pm2 -g
+#   become: yes
+#   npm:
+#     name: pm2
+#     global: yes
+#     state: latest
+#     production: yes
