--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,30 +1,69 @@
 ---
-- name: Create a directory for the project 
-  file:
-    path: /home/ubuntu/node_project
-    state: directory
-    mode: '0755'
+#intial
+# - name: Create a directory for the project 
+#   file:
+#     path: /home/ubuntu/node_project
+#     state: directory
+#     mode: '0755'
 
-- name: Extract backend files into /etc/node_project
-  unarchive:
-    src: /tmp/artifact.tar.gz 
-    dest: /home/ubuntu/node_project
-  register: untar
+# - name: Extract backend files into /etc/node_project
+#   unarchive:
+#     src: /tmp/artifact.tar.gz 
+#     dest: /home/ubuntu/node_project
+#   register: untar
 
-- name: Remove tar file 
-  ansible.builtin.file:
-    path: /home/ubuntu/artifact.tar.gz
-    state: absent
+# - name: Remove tar file 
+#   ansible.builtin.file:
+#     path: /home/ubuntu/artifact.tar.gz
+#     state: absent
 
-- name: serve file
-  shell: |
-    npm install
-    npm run build
-    pm2 stop default
-    pm2 start npm -- start
+# - name: serve file
+#   shell: |
+#     npm install
+#     npm run build
+#     pm2 stop default
+#     pm2 start npm -- start
     
-  args:
-    chdir: /home/ubuntu/node_project
+#   args:
+#     chdir: /home/ubuntu/node_project
+
+
+#new 
+- name: 'update and upgrade packages.'
+  become: yes
+  apt:
+    upgrade: yes
+    update_cache: yes
+    cache_valid_time: 86400
+- name: remove unneeded deps
+  become: yes
+  apt:
+    autoremove: yes
+- name: install deps
+  become: yes
+  apt:
+    name: ['nodejs', 'npm']
+    state: latest
+    update_cache: yes
+- name: install pm2
+  become: yes
+  npm:
+    name: pm2
+    global: yes
+    state: latest
+    production: yes
+- name: extract artifact
+  become: yes
+  unarchive:
+    src: files/artifact.tar.gz
+    dest: .
+
+- name: start app
+  become: yes
+  shell: |
+    pm2 delete all
+    pm2 start npm -- start
+
   environment:
   - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
   - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
