--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,8 +1,22 @@
 ---
-- name: "Add Node.js from source"
-  become: true
+# - name: "Add Node.js from source"
+#   become: true
+#   shell: |
+#     curl -sL https://deb.nodesource.com/setup13.x | sudo -E bash - 
+- name: update apt
+  apt:
+    update_cache: yes
+  
+- name: upgrade apt
+  apt:
+    upgrade: yes
+
+- name: install nodejs repo for version 13x
   shell: |
-    curl -sL https://deb.nodesource.com/setup13.x | sudo -E bash - 
+    curl https://deb.nodesource.com/setup_13.x | sudo bash -
+  args:
+    executable: /bin/bash 
+
 - name: "Install Node.js 13"
   become: true
   apt: 
