--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -16,11 +16,11 @@
       wait_for_connection:
         timeout: 600
 
-    - name: 'install python for Ansible.'
-      become: true
-      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
-      changed_when: false
-      # apt:
+    # - name: 'install python for Ansible.'
+    #   become: true
+    #   raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
+    #   changed_when: false
+    #   # apt:
       #   name: python3
       #   state: latest
       #   update_cache: yes
