--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -14,16 +14,12 @@
   pre_tasks:
     - name: 'wait 600 seconds for target connection to become reachable/usable.'
       wait_for_connection:
-        timeout: 600
 
-    # - name: 'install python for Ansible.'
-    #   become: true
-    #   raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
-    #   changed_when: false
-    #   # apt:
-      #   name: python3
-      #   state: latest
-      #   update_cache: yes
+    - name: 'install python for Ansible.'
+      apt:
+        name: python3
+        state: latest
+        update_cache: yes
 
   environment:
     - NODE_ENV: production
@@ -31,7 +27,7 @@
     - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
     - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
     - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
-    - TYPEORM_PORT: 5432
+    - TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT')}}"
     - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
     - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
     - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
@@ -40,4 +36,3 @@
 
   roles:
     - configure-server
-    - configure-prometheus-node-exporter
