--- a/.circleci/ansible/roles/configure-server/tasks/main.yml
+++ b/.circleci/ansible/roles/configure-server/tasks/main.yml
@@ -1,107 +1,24 @@
 ---
-- name: Create a directory for the project 
-  file:
-    path: /home/ubuntu/node_project
-    state: directory
-    mode: '0755'
-
-- name: Extract backend files into /etc/node_project
-  unarchive:
-    src: /tmp/artifact.tar.gz 
-    dest: /home/ubuntu/node_project
-  register: untar
-
-- name: Remove tar file 
-  ansible.builtin.file:
-    path: /home/ubuntu/artifact.tar.gz
-    state: absent
-
-- name: serve file
-  shell: |
-    npm install
-    pm2 stop default
-    pm2 start npm -- start
-  args:
-    chdir: /home/ubuntu/node_project
-  environment:
-  - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
-  - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
-  - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
-  - TYPEORM_PORT: 5432
-  - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
-  - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
-  - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
-  - TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
-  - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
- 
-
-
-
-
-
-
-# - name: "Add Node.js from source"
-#   become: true
-#   shell: |
-#     curl -sL https://deb.nodesource.com/setup13.x | sudo -E bash - 
-
-  
-# - name: upgrade apt
-#   apt:
-#     upgrade: yes
-#     update_cache: yes
-#     cache_valid_time: 86400
-
-# - name: remove unneeded deps # sudo apt autoremove
-#   become: yes
-#   apt:
-#     autoremove: yes
-
-# - name: install nodejs repo for version 13x
-#   shell: |
-#     curl https://deb.nodesource.com/setup_13.x | sudo bash -
-#   args:
-#     executable: /bin/bash 
-
-# - name: "Install Node.js 13"
-#   become: true
-#   apt: 
-#     name: ['nodejs','npm']
-#     state: latest
-#     update_caches: yes
-
-# - name: "Install PM2 Globally"
-#   npm:
-#     name: pm2
-#     global: yes
-
-# - name: "move env variables to /etc/profile.d/"
-#   become: true 
-#   copy:
-#     src: myenv.sh
-#     dest: /etc/profile.d/
-
-
-# - name: 'update and upgrade packages.' # sudo apt upgrade
-#   become: yes
-#   apt:
-#     upgrade: yes
-#     update_cache: yes
-#     cache_valid_time: 86400
-# - name: remove unneeded deps # sudo apt autoremove
-#   become: yes
-#   apt:
-#     autoremove: yes
-# - name: install deps # sudo apt install nodejs npm
-#   become: yes
-#   apt:
-#     name: ['nodejs', 'npm']
-#     state: latest
-#     update_cache: yes
-# - name: install pm2 # sudo npm install pm2 -g
-#   become: yes
-#   npm:
-#     name: pm2
-#     global: yes
-#     state: latest
-#     production: yes
+- name: 'update and upgrade packages.' # sudo apt upgrade
+  become: yes
+  apt:
+    upgrade: yes
+    update_cache: yes
+    cache_valid_time: 86400
+- name: remove unneeded deps # sudo apt autoremove
+  become: yes
+  apt:
+    autoremove: yes
+- name: install deps # sudo apt install nodejs npm
+  become: yes
+  apt:
+    name: ['nodejs', 'npm']
+    state: latest
+    update_cache: yes
+- name: install pm2 # sudo npm install pm2 -g
+  become: yes
+  npm:
+    name: pm2
+    global: yes
+    state: latest
+    production: yes
