--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,35 +1,31 @@
 ---
-- name: Create a directory for the project 
-  file:
-    path: /home/ubuntu/node_project
+- name: "Creates backend app directory"
+  file: 
+    path: ~/backend-app
     state: directory
-    mode: '0755'
 
-- name: Extract backend files into /etc/node_project
-  unarchive:
-    src: /tmp/artifact.tar.gz 
-    dest: /home/ubuntu/node_project
-  register: untar
+- name: "Unarchive backend files"
+  unarchive: 
+    src: artifact.tar.gz
+    dest: ~/backend-app
 
-- name: Remove tar file 
-  ansible.builtin.file:
-    path: /home/ubuntu/artifact.tar.gz
-    state: absent
-
-- name: serve file
+- name: "Installing Node Dependencies"
   shell: |
+    cd ~/backend-app
+    npm i
+
+- name: "Executing Node app with PM2"
+  shell: |
+    cd ~/backend-app/dist
+    
+    cd ../
     npm install
     npm run build
-    npm install forever -g
-    npm install ts-node -g
+    sudo npm install forever -g
+    sudo npm install ts-node -g
     forever start -c "ts-node -r tsconfig-paths/register -r dotenv/config src/main.ts" ./
     register: execute_node
-    pm2 stop default
-    pm2 start npm -- start
-  args:
-    chdir: /home/ubuntu/node_project
   environment:
-  #- ENVIRONMENT: production > "./backend/.env"
   - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
   - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
   - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
@@ -39,57 +35,15 @@
   - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
   - TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
   - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
+
+- name: print message
+  debug:
+    msg: "{{ execute_node.stdout_lines }}"
+
 - name: "Configure pm2 to start as service"
   become: true 
   shell: |
     env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu
-
-
-#- name: "Creates backend app directory"
-#   file: 
-#     path: ~/backend-app
-#     state: directory
-
-# - name: "Unarchive backend files"
-#   unarchive: 
-#     src: artifact.tar.gz
-#     dest: ~/backend-app
-
-# - name: "Installing Node Dependencies"
-#   shell: |
-#     cd ~/backend-app
-#     npm i
-
-# - name: "Executing Node app with PM2"
-#   shell: |
-#     cd ~/backend-app/dist
-    
-#     cd ../
-#     npm install
-#     npm run build
-#     sudo npm install forever -g
-#     sudo npm install ts-node -g
-#     forever start -c "ts-node -r tsconfig-paths/register -r dotenv/config src/main.ts" ./
-#     register: execute_node
-#   environment:
-#   - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
-#   - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
-#   - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
-#   - TYPEORM_PORT: 5432
-#   - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
-#   - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
-#   - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
-#   - TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
-#   - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
-
-# - name: print message
-#   debug:
-#     msg: "{{ execute_node.stdout_lines }}"
-
-# - name: "Configure pm2 to start as service"
-#   become: true 
-#   shell: |
-#     env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu
 
 
 
@@ -146,3 +100,56 @@
 #      TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
 #      TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
 #      TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
+
+
+
+
+
+# old
+
+# - name: Create a directory for the project 
+#   file:
+#     path: /home/ubuntu/node_project
+#     state: directory
+#     mode: '0755'
+
+# - name: Extract backend files into /etc/node_project
+#   unarchive:
+#     src: /tmp/artifact.tar.gz 
+#     dest: /home/ubuntu/node_project
+#   register: untar
+
+# - name: Remove tar file 
+#   ansible.builtin.file:
+#     path: /home/ubuntu/artifact.tar.gz
+#     state: absent
+
+# - name: serve file
+#   shell: |
+#     npm install
+#     npm run build
+#     npm install forever -g
+#     npm install ts-node -g
+#     forever start -c "ts-node -r tsconfig-paths/register -r dotenv/config src/main.ts" ./
+#     register: execute_node
+#     pm2 stop default
+#     pm2 start npm -- start
+#   args:
+#     chdir: /home/ubuntu/node_project
+#   environment:
+#   #- ENVIRONMENT: production > "./backend/.env"
+#   - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
+#   - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
+#   - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
+#   - TYPEORM_PORT: 5432
+#   - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
+#   - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
+#   - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
+#   - TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
+#   - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
+# - name: "Configure pm2 to start as service"
+#   become: true 
+#   shell: |
+#     env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu
+
+
