--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,155 +1,50 @@
 ---
-- name: "Creates backend app directory"
-  file: 
-    path: ~/backend-app
-    state: directory
+- name: "show remote environment"
+  shell: env
 
-- name: "Unarchive backend files"
-  unarchive: 
-    src: artifact.tar.gz
-    dest: ~/backend-app
+- name: 'update and upgrade packages.'
+  become: yes
+  apt:
+    upgrade: yes
+    update_cache: yes
+    cache_valid_time: 86400
+- name: remove unneeded deps
+  become: yes
+  apt:
+    autoremove: yes
+- name: install deps
+  become: yes
+  apt:
+    name: ['nodejs', 'npm']
+    state: latest
+    update_cache: yes
+- name: install pm2
+  become: yes
+  npm:
+    name: pm2
+    global: yes
+    state: latest
+    production: yes
+- name: extract artifact
+  become: yes
+  unarchive:
+    src: files/artifact.tar.gz
+    dest: .
 
-- name: "Installing Node Dependencies"
+
+- name: start app
+  become: yes
   shell: |
-    cd ~/backend-app
-    npm i
-
-- name: "Executing Node app with PM2"
-  shell: |
-    cd ~/backend-app/dist
-    
-    cd ../
-    npm install
-    npm run build
-    sudo npm install forever -g
-    sudo npm install ts-node -g
-    forever start -c "ts-node -r tsconfig-paths/register -r dotenv/config src/main.ts" ./
-    register: execute_node
+    pm2 delete all
+    sudo pm2 start npm -- start
   environment:
-  - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
-  - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
-  - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
-  - TYPEORM_PORT: 5432
-  - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
-  - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
-  - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
-  - TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
-  - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
-
-- name: print message
-  debug:
-    msg: "{{ execute_node.stdout_lines }}"
-
-- name: "Configure pm2 to start as service"
-  become: true 
-  shell: |
-    env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu
-
-
-
-
-
-
-# ---
-# - name: "show remote environment"
-#   shell: env
-
-# - name: 'update and upgrade packages.'
-#   become: yes
-#   apt:
-#     upgrade: yes
-#     update_cache: yes
-#     cache_valid_time: 86400
-# - name: remove unneeded deps
-#   become: yes
-#   apt:
-#     autoremove: yes
-# - name: install deps
-#   become: yes
-#   apt:
-#     name: ['nodejs', 'npm']
-#     state: latest
-#     update_cache: yes
-# - name: install pm2
-#   become: yes
-#   npm:
-#     name: pm2
-#     global: yes
-#     state: latest
-#     production: yes
-# - name: extract artifact
-#   become: yes
-#   unarchive:
-#     src: files/artifact.tar.gz
-#     dest: .
-
-
-# - name: start app
-#   become: yes
-#   shell: |
-#     pm2 delete all
-#     pm2 start npm -- start
-#   environment:
-#      ENVIRONMENT: production
-#      TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
-#      TYPEORM_MIGRATIONS_DIR: "./migrations"
-#      TYPEORM_MIGRATIONS: "./migrations/*.js"
-#      TYPEORM_ENTITIES: "./modules/domain/**/*.entity.js"
-#      TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
-#      TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
-#      TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
-#      TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
-#      TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
-
-
-
-
-
-# old
-
-# - name: Create a directory for the project 
-#   file:
-#     path: /home/ubuntu/node_project
-#     state: directory
-#     mode: '0755'
-
-# - name: Extract backend files into /etc/node_project
-#   unarchive:
-#     src: /tmp/artifact.tar.gz 
-#     dest: /home/ubuntu/node_project
-#   register: untar
-
-# - name: Remove tar file 
-#   ansible.builtin.file:
-#     path: /home/ubuntu/artifact.tar.gz
-#     state: absent
-
-# - name: serve file
-#   shell: |
-#     npm install
-#     npm run build
-#     npm install forever -g
-#     npm install ts-node -g
-#     forever start -c "ts-node -r tsconfig-paths/register -r dotenv/config src/main.ts" ./
-#     register: execute_node
-#     pm2 stop default
-#     pm2 start npm -- start
-#   args:
-#     chdir: /home/ubuntu/node_project
-#   environment:
-#   #- ENVIRONMENT: production > "./backend/.env"
-#   - TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION')}}"
-#   - TYPEORM_ENTITIES: "{{ lookup('env', 'TYPEORM_ENTITIES')}}"
-#   - TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST')}}"
-#   - TYPEORM_PORT: 5432
-#   - TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME')}}"
-#   - TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD')}}"
-#   - TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE')}}"
-#   - TYPEORM_MIGRATIONS: "{{ lookup('env', 'TYPEORM_MIGRATIONS')}}"
-#   - TYPEORM_MIGRATIONS_DIR: "{{ lookup('env', 'TYPEORM_MIGRATIONS_DIR')}}"
-# - name: "Configure pm2 to start as service"
-#   become: true 
-#   shell: |
-#     env PATH=$PATH:/usr/local/bin pm2 startup systemd -u ubuntu --hp /home/ubuntu
-
-
+     ENVIRONMENT: production
+     TYPEORM_CONNECTION: "{{ lookup('env', 'TYPEORM_CONNECTION') }}"
+     TYPEORM_MIGRATIONS_DIR: "./migrations"
+     TYPEORM_MIGRATIONS: "./migrations/*.js"
+     TYPEORM_ENTITIES: "./modules/domain/**/*.entity.js"
+     TYPEORM_HOST: "{{ lookup('env', 'TYPEORM_HOST') }}"
+     TYPEORM_PORT: "{{ lookup('env', 'TYPEORM_PORT') }}"
+     TYPEORM_USERNAME: "{{ lookup('env', 'TYPEORM_USERNAME') }}"
+     TYPEORM_PASSWORD: "{{ lookup('env', 'TYPEORM_PASSWORD') }}"
+     TYPEORM_DATABASE: "{{ lookup('env', 'TYPEORM_DATABASE') }}"
