--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -297,11 +297,11 @@ jobs:
             mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
             mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
             cd .circleci/ansible
+            echo "[web]" > inventory.txt
             echo $(aws ec2 describe-instances \
               --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --filters Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
               --output text) >> inventory.txt
-            echo 
             echo "Contents of the inventory.txt file is ------$(cat inventory.txt)"
             # chmod 744 /tmp/workspace/inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml -vv
@@ -443,5 +443,5 @@ workflows:
           requires: [deploy-backend, deploy-frontend]
       - cloudfront-update:
           requires: [smoke-test]
-      - cleanup:
-          requires: [cloudfront-update, add-prometheus-node-exporter]
+      # - cleanup:
+      #     requires: [cloudfront-update, add-prometheus-node-exporter]
